integration module terminer